syntax = "proto3";

package v1;

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

option java_package = "cn.polarismesh.polaris.sync.configfile.pb";
option java_outer_classname = "ConfigFileProto";


message ConfigFileRelease {
  google.protobuf.UInt64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue namespace = 3;
  google.protobuf.StringValue group = 4;
  google.protobuf.StringValue file_name = 5;
  google.protobuf.StringValue content = 6;
  google.protobuf.StringValue comment = 7;
  google.protobuf.StringValue md5 = 8;
  google.protobuf.UInt64Value version = 9;
  google.protobuf.StringValue create_time = 10;
  google.protobuf.StringValue create_by = 11;
  google.protobuf.StringValue modify_time = 12;
  google.protobuf.StringValue modify_by = 13;
}
